// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderType: REGION > Modifying the operatorStyle from none to tags 1`] = `
{
  "filters": [
    {
      "conditions": [
        {
          "operator": "one_of",
          "property": "Region",
          "value": [
            "110000",
          ],
        },
      ],
      "logicalOperator": "and",
    },
  ],
  "logicalOperator": "and",
}
`;

exports[`renderType: REGION > Modifying the operatorStyle from tags to none 1`] = `
{
  "filters": [
    {
      "conditions": [
        {
          "operator": "empty",
          "property": "Region",
        },
      ],
      "logicalOperator": "and",
    },
  ],
  "logicalOperator": "and",
}
`;

exports[`renderType: REGION > operator: "style=none" 1`] = `
{
  "filters": [
    {
      "conditions": [
        {
          "operator": "empty",
          "property": "Region",
        },
      ],
      "logicalOperator": "and",
    },
  ],
  "logicalOperator": "and",
}
`;

exports[`renderType: REGION > operator: "style=noop" && value is not empty 1`] = `
{
  "filters": [
    {
      "conditions": [
        {
          "operator": "equal",
          "property": "Region",
          "value": [
            "110000",
          ],
        },
      ],
      "logicalOperator": "and",
    },
  ],
  "logicalOperator": "and",
}
`;

exports[`renderType: REGION > operator: "style=one_of" && value is not empty 1`] = `
{
  "filters": [
    {
      "conditions": [
        {
          "operator": "one_of",
          "property": "Region",
          "value": [
            "110000",
          ],
        },
      ],
      "logicalOperator": "and",
    },
  ],
  "logicalOperator": "and",
}
`;
